# atomic_habits

./: .flake8  .gitignore  Dockerfile  README.md  check.py  db.sqlite3  docker-compose.dev.yml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
 telegram/management/commands/: set_webhook.py
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_options_alter_habit_action_and_more.py
nginx/: nginx.conf
telegram/: bot.py  tasks.py  urls.py  views.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
