[project]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = [
    {name = "Розова София",email = "rozowasof@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --reuse-db -v"

[tool.coverage.run]
source = ["habits", "users", "telegram"]
omit = ["*/migrations/*", "*/tests/*"]