[project]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = [
    {name = "Розова София",email = "rozowasof@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp (==5.3.1)",
    "asgiref (==3.11.1)",
    "billiard (==4.2.4)",
    "celery (==5.6.2)",
    "certifi (==2026.2.25)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1.2)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "coverage (==7.13.4)",
    "cron-descriptor (==1.4.5)",
    "django (==4.2.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --reuse-db -v"

[tool.coverage.run]
source = ["habits", "users", "telegram"]
omit = ["*/migrations/*", "*/tests/*"]